Cleaned up foreign key unused functionality. Added support for logging DDL calls. Extracted TableSpec to core as AbstractTableSpec trait for reusability in multiple database implementations. Extracted Trigger functionality into TriggerSpec. Minor cleanup and fixes to MySQL support.  Added support for travis testing with MySQL.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: scala
 scala:
-  - 2.11.6
+  - 2.11.7
+addons:
+  postgresql: "9.3"
+before_script:
+  - mysql -e 'create database tablespec;'
+  - mysql -e 'create database cross_reference;'
+  - mysql -e 'create database special_types;'
