--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,7 @@ before_script:
   - psql -c 'create database tablespec owner travis;' -U postgres
   - psql -c 'create database cross_reference owner travis;' -U postgres
   - psql -c 'create database special_types owner travis;' -U postgres
+before_install:
+  - pip install --user codecov
+after_success:
+  - codecov
