Dependency updates and support for Scala 2.12.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,17 @@
 sudo: false
 language: scala
 scala:
-  - 2.11.7
+  - 2.11.8
+  - 2.12.1
 jdk:
   - oraclejdk8
+cache:
+  directories:
+    - $HOME/.ivy2/cache
+    - $HOME/.sbt/boot
+before_cache:
+  - find $HOME/.ivy2 -name "ivydata-*.properties" -delete
+  - find $HOME/.sbt -name "*.lock" -delete
 addons:
   mariadb: "10.0"
   postgresql: "9.3"
